# SF_PluginTemplate

./: .gitattributes  .gitignore  .gitmodules  README.md  build-clang-cl.bat  build-msvc.bat  build-release.ps1  generate-sln.ps1  make-sln-clang-cl.bat  make-sln-msvc.bat  update-submodule.bat
.github/: TEMPLATE  bootstrap.ps1
.github/workflows/: bootstrap.yml  build.yml  clang-format.yml  maintenance.yml
Plugin/: !update.ps1  CMakeLists.txt  CMakePresets.json  vcpkg.json
Plugin/cmake/: Plugin.h.in  common.cmake  version.rc.in
Plugin/include/SFSE/: Stub.h
Plugin/src/: PCH.h  main.cpp
PluginTemplate/: CMakeLists.txt
